# Mimicry

./: .gitignore  404.html  CHANGELOG.md  Dockerfile  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: cd.yml  ci.yml  release.yml
CHANGELOG/: index.html
cli/: index.html
configuration/: index.html
development/: index.html
docs/: CHANGELOG.md  cli.md  configuration.md  development.md  index.md  interactive.md  sinks.md
examples/sinks/: deltalake_gcs_sink.yaml  deltalake_s3_sink.yaml  deltalake_sink.yaml
examples/tables/: DimCustomerFeedback.yaml  DimEmployees.yaml  DimGeospatialData.yaml  DimMarketingCampaigns.yaml  DimProducts.yaml  DimUsers.yaml  FactFinancialTransactions.yaml  FactInventoryLevels.yaml  FactOrders.yaml  InteractiveExample.yaml  LogWebTraffic.yaml
search/: search_index.json
sinks/: index.html
src/mimicry/: __init__.py  cli.py  core.py  data.py  exceptions.py  filesystem.py  interactive.py  models.py  server.py  utils.py
tests/: conftest.py  docker-compose.yml  test_data.py  test_server.py
tests/static/: people.yaml
