[project]
name = "mimicry"
version = "0.1.0"
description = "Mimicry is a Python-based tool designed for generating and streaming synthetic data."
readme = "README.md"
authors = [
    { name = "Kacper Wojtasinski", email = "k0wojtasinski@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.2",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "mimesis>=18.0.0",
    "pandas>=2.2.3",
    "polars[deltalake,iceberg]>=1.29.0",
    "pydantic>=2.11.4",
    "pyyaml>=6.0.2",
    "typer>=0.15.4",
    "uvicorn>=0.34.2",
]

[project.scripts]
mimicry = "mimicry.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]
