[project]
name = "mimicry"
version = "0.2.1"
description = "Mimicry is a Python-based tool designed for generating and streaming synthetic data."
readme = "README.md"
authors = [
    { name = "Kacper Wojtasinski", email = "k0wojtasinski@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.42",
    "connectorx>=0.4.3",
    "duckdb>=1.2.2",
    "fastapi>=0.115.12",
    "google-cloud-storage>=3.1.1",
    "httpx>=0.28.1",
    "kafka-python>=2.2.11",
    "mimesis>=18.0.0",
    "pandas>=2.2.3",
    "polars[deltalake,iceberg]>=1.29.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.4",
    "pytest-docker>=3.2.2",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.41",
    "typer>=0.15.4",
    "uvicorn>=0.34.2",
]

[project.scripts]
mimicry = "mimicry.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs-material>=9.6.14",
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]

[tool.pytest.ini_options]
addopts = "-ssv"
markers = [
    "unit: unit tests",
    "integration: tests using Docker Compose",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
changelog_file = "docs/CHANGELOG.md"
